Changed to .net 8

--- a/2023pz-trrepo.csproj
+++ b/2023pz-trrepo.csproj
@@ -8,9 +8,9 @@
     <IsPackable>false</IsPackable>
     <SpaRoot>ClientApp\</SpaRoot>
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
-    <SpaProxyServerUrl>https://localhost:44474</SpaProxyServerUrl>
+    <SpaProxyServerUrl>https://localhost:44409</SpaProxyServerUrl>
     <SpaProxyLaunchCommand>npm start</SpaProxyLaunchCommand>
-    <RootNamespace>Projekt_zespołowy</RootNamespace>
+    <RootNamespace>_2023pz_trrepo</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
