--- a/ClientApp/public/manifest.json
+++ b/ClientApp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Projekt_zespołowy",
-  "name": "Projekt_zespołowy",
+  "short_name": "_2023pz_trrepo",
+  "name": "_2023pz_trrepo",
   "icons": [
     {
       "src": "favicon.ico",
