--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:expensestrackerdb.database.windows.net,1433;Initial Catalog=ExpensesTrackerDB;Persist Security Info=False;User ID=expensestrackerdb;Password=JSDi2$#dsf21;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=expensestracker;User Id=postgres;Password=Jd#$k!@f@lfdsoa%;"
+    //"Integrated" "Security=true;Pooling=true;"
   },
   "Logging": {
     "LogLevel": {
