--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Baza;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=expensestracker;User Id=postgres;Password=Jd#$k!@f@lfdsoa%;"
+    //"Integrated" "Security=true;Pooling=true;"
   },
   "Logging": {
     "LogLevel": {
