--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "react-router-dom": "^6.19.0"
+    "react-router": "^6.20.0",
+    "react-router-dom": "^6.20.0"
   }
 }
