--- a/2023pz-trrepo.csproj
+++ b/2023pz-trrepo.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Model\Converters\" />
     <Folder Include="Pages\Account\" />
   </ItemGroup>
 
