--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,7 @@ _Pvt_Extensions
 
 # FAKE - F# Make
 .fake/
+/Migrations/20231128102321_init.cs
+/Migrations/20231129191507_Init.cs
+/Migrations/ETDbContextModelSnapshot.cs
+/Migrations/20231127194424_Init1.cs
