--- a/.gitignore
+++ b/.gitignore
@@ -232,3 +232,5 @@ _Pvt_Extensions
 .fake/
 /Migrations/20231128102321_init.cs
 /Migrations/20231129191507_Init.cs
+/Migrations/ETDbContextModelSnapshot.cs
+/Migrations/20231127194424_Init1.cs
