--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=PZ-TRREPO;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False;"
+    "DefaultConnection": "Server=127.0.0.1;Port=3306;Database=etlocal;Uid=root;Pwd=zaq1@WSX;"
   },
   "Logging": {
     "LogLevel": {
