--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Port=3306;Database=etlocal;Uid=root;Pwd=zaq1@WSX;"
+    "DefaultConnection": "Server=tcp:sql-serwer.database.windows.net,1433;Initial Catalog=expensestrackerDB;Persist Security Info=False;User ID=postgres;Password=dcFEEP8xxMf77cJ#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
