--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
+    "chart.js": "^4.4.0",
+    "react-big-calendar": "^1.8.5",
+    "react-calendar": "^4.6.1",
+    "react-chartjs-2": "^5.2.0",
     "react-router": "^6.20.0",
     "react-router-dom": "^6.20.0"
   }
