--- a/2023pz-trrepo.csproj
+++ b/2023pz-trrepo.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -40,6 +40,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ClientApp\src\styles\" />
     <Folder Include="Model\Converters\" />
     <Folder Include="Pages\Account\" />
   </ItemGroup>
