--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost; Database=teamproject; Username=postgres; Password=dcFEEP8xxMf77cJ#"
+    "DefaultConnection":"Server=tcp:sql-serwer.database.windows.net,1433;Initial Catalog=expensestrackerDB;Persist Security Info=False;User ID=postgres;Password=dcFEEP8xxMf77cJ#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "JanConnection": "Host=localhost; Database=teamproject; Username=postgres; Password=dcFEEP8xxMf77cJ#"
   },
   "Logging": {
     "LogLevel": {
