--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,10 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=tcp:sql-serwer.database.windows.net,1433;Initial Catalog=expensestrackerDB;Persist Security Info=False;User ID=postgres;Password=dcFEEP8xxMf77cJ#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-        "JanConnection": "Host=localhost; Database=teamproject; Username=postgres; Password=dcFEEP8xxMf77cJ#",
-        "OlaConnection": "Host=localhost; Database=Baza; Username=postgres; Password=B@z@D@nych"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:sql-serwer.database.windows.net,1433;Initial Catalog=expensestrackerDB;Persist Security Info=False;User ID=postgres;Password=dcFEEP8xxMf77cJ#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "JanConnection": "Host=localhost; Database=teamproject; Username=postgres; Password=dcFEEP8xxMf77cJ#",
+    "OlaConnection": "Host=localhost; Database=Baza; Username=postgres; Password=B@z@D@nych",
+    "PaulinaConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=baza;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
