PZTRAC-22 Implemented Two-Factor authentication while login

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,8 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=tcp:sql-serwer.database.windows.net,1433;Initial Catalog=expensestrackerDB;Persist Security Info=False;User ID=postgres;Password=dcFEEP8xxMf77cJ#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-        "JanConnection": "Host=localhost; Database=teamproject; Username=postgres; Password=dcFEEP8xxMf77cJ#",
-        "OlaConnection": "Host=localhost; Database=Baza; Username=postgres; Password=B@z@D@nych"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:sql-serwer.database.windows.net,1433;Initial Catalog=expensestrackerDB;Persist Security Info=False;User ID=postgres;Password=dcFEEP8xxMf77cJ#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "LocalConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=PZ-TRREPO;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -13,4 +12,3 @@
   },
   "AllowedHosts": "*"
 }
-
