--- a/appsettings.json
+++ b/appsettings.json
@@ -4,7 +4,8 @@
     "JanConnection": "Host=localhost; Database=teamproject; Username=postgres; Password=dcFEEP8xxMf77cJ#",
     "OlaConnection": "Host=localhost; Database=Baza; Username=postgres; Password=B@z@D@nych",
     "Jan2": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=teamproject;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
-    "EwaConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Baza;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "EwaConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Baza;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
+    "KasiaConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Baza2;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "Logging": {
     "LogLevel": {
