--- a/2023pz-trrepo.csproj
+++ b/2023pz-trrepo.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="GoogleAuthenticator" Version="3.1.1" />
     <PackageReference Include="itext7" Version="8.0.2" />
     <PackageReference Include="iTextSharp" Version="5.5.13.3" />
+    <PackageReference Include="MailKit" Version="4.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy" Version="7.0.14" />
