--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=tcp:sql-serwer.database.windows.net,1433;Initial Catalog=expensestrackerDB;Persist Security Info=False;User ID=postgres;Password=dcFEEP8xxMf77cJ#;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "JanConnection": "Host=localhost; Database=teamproject; Username=postgres; Password=dcFEEP8xxMf77cJ#",
+    "JanConnection": "Host=database; Database=teamproject; Username=january; Password=dcFEEP8xxMf77cJ#",
     "OlaConnection": "Host=localhost; Database=Baza; Username=postgres; Password=B@z@D@nych",
     "Jan2": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=teamproject;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
     "EwaConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Baza;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False",
