--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -52,6 +52,7 @@
   "scripts": {
     "prestart": "node aspnetcore-https && node aspnetcore-react",
     "start": "rimraf ./build && react-scripts start",
+    "docker-run": "rimraf ./build && WATCHPACK_POLLING=true react-scripts start --host 0.0.0.0",
     "build": "react-scripts build",
     "test": "cross-env CI=true react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
